feat: Implement user auth with google/facebook/credentials
